queXS 1.11.0 - Changes since 1.10.4


ALTER TABLE `questionnaire_sample` ADD `allow_new` TINYINT( 1 ) NOT NULL DEFAULT '1';


queXS 1.10.4 - Changes since 1.10.3

Fixed bug: Quota priority could get below 0
Fixed bug: Process won't close itself if forced killed before it has a chance to close
Fixed bug: lp:1338395 - Quotas being incremented in samples that have not yet been accessed
Fixed bug: Download VoIP client script failing
Translations: Updated from Launchpad. Thank you for contributing!

queXS 1.10.3 - Changes since 1.10.2

Fixed bug: Initial page is always Call/Hangup even if on a call or no case available
Fixed bug: When last outcome is Technical Phone Problems, case outcome set to not attempted or worked
Translations: Almost complete Simplified Chinese translation added - Thank you!

queXS 1.10.2 - Changes since 1.10.1

New Feature: Shift report in data output
New feature: Deidentify a case

Fixed bug: OPERATOR and RESPONDENT replacements not working in respondent selection module
Fixed bug: Not adding interviewer to htgroup when changing username
Fixed bug: Not all browsers recognise text as UTF-8
Fixed bug: Not all strings being translated
Fixed bug: Session expiry occurring when moving from respondent selection module to questionnaire

Updated translations and the beginning of a German translation - Thank you Daniel.

queXS 1.10.1 - Changes since 1.10.0

Fixed Bug: Database creation fails due to additional comma (new installations)
Translations updated - Thank you!

queXS 1.10.0 - Changes since 1.9.2

New Feature: Operators can choose extension (see: https://blueprints.launchpad.net/quexs/+spec/operatorextension)
New Feature: Accept case referrals (see: https://blueprints.launchpad.net/quexs/+spec/referral)
Fixed Bug: Timezone detection not choosing best number

Database updates:

ALTER TABLE `questionnaire` ADD `referral` TINYINT( 1 ) NOT NULL DEFAULT '0' AFTER `self_complete`

CREATE TABLE IF NOT EXISTS `extension` (